--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.0",
-    "mongoose-sequence": "^5.2.1"
+    "mongoose-sequence": "^5.2.1",
+    "socket.io": "^2.2.0"
   }
 }
