Send notification via OneSignal

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,11 @@
 APP_PORT=3000
+APP_URL=http://localhost:3000
 JWT_KEY=jwtsecretkey
 JWT_TTL=2592000
 ADMIN_TOKEN=admintokenkey
 MONGODB_URI=mongodb://ubuntu-server:27017
+ONESIGNAL_APP_ID=123
+ONESIGNAL_REST_API_KEY=456
+ONESIGNAL_SEGMENT="abc"
+ONESIGNAL_ICON_URL="https://www.materialui.co/materialIcons/action/check_circle_black_192x192.png"
+ONESIGNAL_IMAGE_URL="https://i.imgur.com/PfXC7D1.png"
