Add Slack Notification

--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,6 @@ ONESIGNAL_REST_API_KEY=456
 ONESIGNAL_SEGMENT="abc"
 ONESIGNAL_ICON_URL="https://www.materialui.co/materialIcons/action/check_circle_black_192x192.png"
 ONESIGNAL_IMAGE_URL="https://i.imgur.com/PfXC7D1.png"
+SLACK_BOT_TOKEN="123"
+SLACK_CHANNEL_ID="456"
+SLACK_THREAD_TS="789"
